made changes so it can run on java 8